# Synapse-Flow

./: command.txt
backend/: browser_bridge.py  code_graph_utils.py  study_hub_routes.py  utils.py
backend_cpp/: CMakeLists.txt
backend_cpp/include/: KeyManager.hpp  LogManager.hpp  PrefixTrie.hpp  SystemMonitor.hpp  ThreadPool.hpp  embedding_service.hpp  faiss_vector_store.hpp  parser_elite.hpp  retrieval_engine.hpp  sync_service.hpp
backend_cpp/include/agent/: AgentExecutor.hpp  ContextManager.hpp
backend_cpp/include/memory/: GraphTypes.hpp  MemoryVault.hpp  PointerGraph.hpp
backend_cpp/include/planning/: ExecutionGuard.hpp  PlanningEngine.hpp
backend_cpp/include/skills/: SkillLibrary.hpp
backend_cpp/include/tools/: AtomicJournal.hpp  CodeExecutionTool.hpp  DockerExecutor.hpp  FileSurgicalTool.hpp  FileSystemTools.hpp  PatternSearchTool.hpp  ShellExecutionTool.hpp
backend_cpp/include/utils/: Scrubber.hpp  SubProcess.hpp
backend_cpp/src/: agent_main.cpp  code_graph.cpp  embedding_service.cpp  faiss_vector_store.cpp  main.cpp  parser_elite.cpp  retrieval_engine.cpp  sync_service.cpp
backend_cpp/src/agent/: AgentExecutor.cpp  AgentService.cpp
backend_cpp/src/memory/: PointerGraph.cpp
backend_cpp/src/tools/: FileSystemTools.cpp
backend_cpp/test/: auto_test_gen.py  debug_phase4.py  deep_scrub.py  fix_retrieval.py  fix_syntax.py  full_audit_extension.py  interactive_chat.py  performance_audit_final.py  probe_exec.py  probe_full_stack.py  probe_reasoning.py  probe_surgical_real.py  probe_syntax_guard.py  setup_config.py  stress_test_ghost.py  stress_test_needle.py  test_graph_audit.py  test_needle_search.py  test_skill_injection.py  test_skill_silence.py  test_skills.py  verify_guard.py
backend_cpp/test/archive/: auto_test_gen.py  auto_test_self_correct.py  benchmark_suite.py  bug_hunter_v2.py  fix_utf8.py  full_audit_extension.py  interactive_chat.py  kill_316.py  performance_audit_final.py  probe_cognitive_fix.py  probe_pattern.py  probe_planning.py  probe_reasoning.py  probe_surgical_real.py  safety_test.py  setup_test_file.py  stress_test_ghost.py  test_agent_healing.py  test_skill_injection.py  test_skill_persistence.py
backend_cpp/test/data/surgical_test_01/: live_test.txt
backend_cpp/www/: index.html  main.js  style.css
extension/media/: chat.css  chat.html  chat.js
extension/src/: extension.ts
extension/src/providers/: CodeChatProvider.ts  CompletionProvider.ts
extension/src/services/: BackendClient.ts
